--- a/Zaikaa/food/templates/usignup.html
+++ b/Zaikaa/food/templates/usignup.html
@@ -1,4 +1,4 @@
-<html>
+<!-- <html>
 <head>
 	<title> Email Auth App by Pranav </title>
 	<style>
@@ -37,5 +37,48 @@
 
 
 
+</body>
+</html> -->
+
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Food Fiesta - Sign Up</title>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{% static 'css/signup.css' %}"
+    />
+</head>
+<body>
+    <img src="{% static 'img/e_cell_logo.png' %}" alt="E-Cell Logo" class="ecell-logo">
+    <div class="container">
+        <img src="{% static 'img/FF_logo.png' %}" alt="Food Fiesta Logo" class="logo">
+        <h2 style="color: #e65c00;">Food Fiesta Sign Up</h2>
+        <form class="signup-form" method="POST">
+			{% csrf_token %}
+            <div class="input-group">
+                <input type="text" id="username" name="username" required>
+                <label for="username">Username</label>
+            </div>
+            <div class="input-group">
+                <input type="tel" id="phone" name="phone" required>
+                <label for="phone">Phone Number</label>
+            </div>
+            <div class="input-group">
+                <input type="email" id="email" name="un" required>
+                <label for="email">Email</label>
+            </div>
+            <button type="submit" class="btn">Sign Up</button>
+			<h4> We will email you otp </h4>
+			<h4> {{ msg }} </h4>
+            <div class="options">
+                <a href="{% url 'ulogin' %}" id="login">Already have an account? Login</a>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
