--- a/Zaikaa/food/templates/pay_online.html
+++ b/Zaikaa/food/templates/pay_online.html
@@ -5,11 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pay Online</title>
     <style>
+        /* Belgiano Serif Font */
+        @font-face {
+        font-family: "Belgiano Serif";
+        src: url("./fonts/Belgiano Serif 2.ttf") format("truetype");
+        font-weight: normal;
+        font-style: normal;
+        }
         body {
-            font-family: Arial, sans-serif;
+            font-family: "Belgiano Serif";
             margin: 0;
             padding: 0;
-            background-color: #f8f8f8;
+            background: #dec1b2;
+            font-size: 16px
         }
         .container {
             width: 80%;
@@ -19,12 +27,24 @@
             border-radius: 10px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
-        h2, h3 {
-            text-align: center;
-            color: #333;
+        h2{
+           color: #984643;
+           text-align: left;
+           padding-bottom: 13px;
+           border-bottom: 1px solid #984643;
         }
-        .order-details, .cart-items, .payment-summary {
+ 
+        .order-details {
+            
             margin-bottom: 20px;
+
+  
+        }
+        .cart-items{
+            padding: 10px;
+            margin-bottom: 10px;
+            border-radius: 8px;
+            
         }
         .cart-items ul {
             list-style-type: none;
@@ -58,12 +78,20 @@
         .pay-button:hover {
             background-color: #005b9f;
         }
+        .payment-summary h3{
+            border-bottom: 1px solid green;
+            text-align: center;
+            color: green;
+        }
+        .order-item{
+            box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.5);
+        }
     </style>
 </head>
 <body>
 
 <div class="container">
-    <h2>Confirm Your Order</h2>
+    <h2 class="name">Confirm Your Order</h2>
 
     <!-- User Details -->
     <div class="order-details">
